--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
+
     implementation "androidx.navigation:navigation-compose:2.5.2"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
 
