--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,10 @@ android {
 }
 
 dependencies {
+
+    implementation "io.coil-kt:coil-compose:2.2.2"
+
+
     implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
 
     implementation "androidx.navigation:navigation-compose:2.5.2"
