--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,17 +71,15 @@ dependencies {
     // Jetpack WorkManager
     implementation "io.insert-koin:koin-androidx-workmanager:$koin_android_version"
     // Navigation Graph
-    implementation "io.insert-koin:koin-androidx-navigation:$koin_android_version"
+//    implementation "io.insert-koin:koin-androidx-navigation:$koin_android_version"
     implementation "io.insert-koin:koin-androidx-compose:$koin_android_compose_version"
-
-    implementation 'androidx.compose.material3:material3:1.0.0-beta03'
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.0'
     implementation "androidx.compose.ui:ui:1.2.1"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.0.0-beta03'
+    implementation 'androidx.compose.material3:material3:1.0.0-rc01'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
